<resources>
    <string name="app_name">GPA_giridj_Calculator</string>
    <string name="course1">Course 1</string>
    <string name="course2">Course 2</string>
    <string name="course3">Course 3</string>
    <string name="course4">Course 4</string>
    <string name="course5">Course 5</string>
    <string name="eTHint">Enter Final Average</string>
    <string name="btn_calculate">Compute GPA</string>
</resources>
