<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GPACalculationScreen">

    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/linearLayoutSub1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="18dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:paddingTop="18dp"
                android:text="@string/course1" />
            <EditText
                android:id="@+id/et1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/eTHint"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutSub2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="18dp"
                android:paddingTop="18dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/course2" />
            <EditText
                android:id="@+id/et2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/eTHint"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutSub3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="18dp"
                android:paddingTop="18dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/course3" />

            <EditText
                android:id="@+id/et3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/eTHint"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutSub4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="18dp"
                android:paddingTop="18dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/course4" />
            <EditText
                android:id="@+id/et4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/eTHint"
                android:paddingBottom="16dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:paddingTop="16dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutSub5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/tv5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="18dp"
                android:paddingTop="18dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/course5" />
            <EditText
                android:id="@+id/et5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/eTHint"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutSub6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <Button
                android:id="@+id/btn_calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:onClick="read_info"
                android:text="@string/btn_calculate"
                android:textColor="@color/button_textcolor" />

            <TextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:paddingTop="16dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
</ScrollView>